WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280324
REGRESSION(
284194@main
): lld-link: error: duplicate symbol: public: __cdecl WTF::CanMakeCheckedPtrBase<class WTF::SingleThreadIntegralWrapper<unsigned int>, ...>
https://bugs.webkit.org/show_bug.cgi?id=280324
Summary
REGRESSION(284194@main): lld-link: error: duplicate symbol: public: __cdecl W...
Fujii Hironori
Reported
2024-09-25 00:31:07 PDT
Windows Debug builds can't link after
284194@main
. Buildbot: builder Windows-64-bit-Debug-Build build 411
https://build.webkit.org/#/builders/1189/builds/411
FAILED: bin/WebKit2.dll lib/WebKit2.lib C:\Windows\system32\cmd.exe /C "cd . && C:\tools\cmake\bin\cmake.exe -E vs_link_dll --intdir=Source\WebKit\CMakeFiles\WebKit.dir --rc="C:\Program Files (x86)\Windows Kits\10\bin\10.0.18362.0\x64\rc.exe" --mt="C:\Program Files (x86)\Windows Kits\10\bin\10.0.18362.0\x64\mt.exe" --manifests -- C:\LLVM\bin\lld-link.exe /nologo @CMakeFiles\WebKit.rsp /out:bin\WebKit2.dll /implib:lib\WebKit2.lib /pdb:bin\WebKit2.pdb /dll /version:0.0 /machine:x64 /debug /INCREMENTAL /DEBUG /OPT:NOICF /OPT:REF /INCREMENTAL:NO && cd ." LINK: command "C:\LLVM\bin\lld-link.exe /nologo @CMakeFiles\WebKit.rsp /out:bin\WebKit2.dll /implib:lib\WebKit2.lib /pdb:bin\WebKit2.pdb /dll /version:0.0 /machine:x64 /debug /INCREMENTAL /DEBUG /OPT:NOICF /OPT:REF /INCREMENTAL:NO /MANIFEST:EMBED,ID=2" failed (exit code 1) with the following output: lld-link: error: duplicate symbol: public: __cdecl WTF::CanMakeCheckedPtrBase<class WTF::SingleThreadIntegralWrapper<unsigned int>, unsigned int, 0>::CanMakeCheckedPtrBase<class WTF::SingleThreadIntegralWrapper<unsigned int>, unsigned int, 0>(class WTF::CanMakeCheckedPtrBase<class WTF::SingleThreadIntegralWrapper<unsigned int>, unsigned int, 0> const &)
>>> defined at C:\BW\Windows-64-bit-Debug-Build\build\WebKitBuild\Debug\WTF\Headers\wtf\CheckedRef.h:276 >>> Source\WebKit\CMakeFiles\WebKit.dir\Shared\win\NativeWebKeyboardEventWin.cpp.obj >>> defined at WebCore.dll
lld-link: error: duplicate symbol: public: __cdecl WTF::CanMakeCheckedPtrBase<class WTF::SingleThreadIntegralWrapper<unsigned int>, unsigned int, 0>::CanMakeCheckedPtrBase<class WTF::SingleThreadIntegralWrapper<unsigned int>, unsigned int, 0>(void)
>>> defined at C:\BW\Windows-64-bit-Debug-Build\build\WebKitBuild\Debug\WTF\Headers\wtf\CheckedRef.h:273 >>> Source\WebKit\CMakeFiles\WebKit.dir\WebProcess\WebPage\wc\GraphicsLayerWC.cpp.obj >>> defined at WebCore.dll
lld-link: error: duplicate symbol: public: __cdecl WTF::CanMakeCheckedPtrBase<class WTF::SingleThreadIntegralWrapper<unsigned int>, unsigned int, 0>::~CanMakeCheckedPtrBase<class WTF::SingleThreadIntegralWrapper<unsigned int>, unsigned int, 0>(void)
>>> defined at C:\BW\Windows-64-bit-Debug-Build\build\WebKitBuild\Debug\WTF\Headers\wtf\CheckedRef.h:279 >>> Source\WebKit\CMakeFiles\WebKit.dir\WebProcess\WebPage\wc\GraphicsLayerWC.cpp.obj >>> defined at WebCore.dll
lld-link: error: duplicate symbol: public: class WTF::CanMakeCheckedPtrBase<class WTF::SingleThreadIntegralWrapper<unsigned int>, unsigned int, 0> & __cdecl WTF::CanMakeCheckedPtrBase<class WTF::SingleThreadIntegralWrapper<unsigned int>, unsigned int, 0>::operator=(class WTF::CanMakeCheckedPtrBase<class WTF::SingleThreadIntegralWrapper<unsigned int>, unsigned int, 0> const &)
>>> defined at C:\BW\Windows-64-bit-Debug-Build\build\WebKitBuild\Debug\WTF\Headers\wtf\CheckedRef.h:277 >>> Source\WebKit\CMakeFiles\WebKit.dir\__\__\WebKit\DerivedSources\unified-sources\UnifiedSource-50d0d8dd-7.cpp.obj >>> defined at WebCore.dll
lld-link: error: duplicate symbol: public: void __cdecl WTF::CanMakeCheckedPtrBase<class WTF::SingleThreadIntegralWrapper<unsigned int>, unsigned int, 0>::decrementPtrCount(void) const
>>> defined at C:\BW\Windows-64-bit-Debug-Build\build\WebKitBuild\Debug\WTF\Headers\wtf\CheckedRef.h:284 >>> Source\WebKit\CMakeFiles\WebKit.dir\NetworkProcess\curl\WebSocketTaskCurl.cpp.obj >>> defined at WebCore.dll
lld-link: error: duplicate symbol: public: void __cdecl WTF::CanMakeCheckedPtrBase<class WTF::SingleThreadIntegralWrapper<unsigned int>, unsigned int, 0>::incrementPtrCount(void) const
>>> defined at C:\BW\Windows-64-bit-Debug-Build\build\WebKitBuild\Debug\WTF\Headers\wtf\CheckedRef.h:282 >>> Source\WebKit\CMakeFiles\WebKit.dir\NetworkProcess\curl\WebSocketTaskCurl.cpp.obj >>> defined at WebCore.dll
lld-link: error: duplicate symbol: public: unsigned int __cdecl WTF::CanMakeCheckedPtrBase<class WTF::SingleThreadIntegralWrapper<unsigned int>, unsigned int, 0>::ptrCountWithoutThreadCheck(void) const
>>> defined at C:\BW\Windows-64-bit-Debug-Build\build\WebKitBuild\Debug\WTF\Headers\wtf\CheckedRef.h:293 >>> Source\WebKit\CMakeFiles\WebKit.dir\NetworkProcess\curl\NetworkSessionCurl.cpp.obj >>> defined at WebCore.dll
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2024-09-25 01:14:23 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34217
EWS
Comment 2
2024-09-25 01:51:56 PDT
Committed
284214@main
(44b0cec9cd0a): <
https://commits.webkit.org/284214@main
> Reviewed commits have been landed. Closing PR #34217 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-09-25 02:10:22 PDT
<
rdar://problem/136657943
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug