REGRESSION(284194@main): lld-link: error: duplicate symbol: public: __cdecl WTF::CanMakeCheckedPtrBase<class WTF::SingleThreadIntegralWrapper<unsigned int>, ...> https://bugs.webkit.org/show_bug.cgi?id=280324

Unreviewed build fix.
Windows port couldn't link WebKit2.dll.

> lld-link: error: duplicate symbol: public: __cdecl WTF::CanMakeCheckedPtrBase<class WTF::SingleThreadIntegralWrapper<unsigned int>, unsigned int, 0>
>     ::CanMakeCheckedPtrBase<class WTF::SingleThreadIntegralWrapper<unsigned int>, unsigned int, 0>
>        (class WTF::CanMakeCheckedPtrBase<class WTF::SingleThreadIntegralWrapper<unsigned int>, unsigned int, 0> const &)

* Source/JavaScriptCore/inspector/agents/InspectorTargetAgent.h:
Added JS_EXPORT_PRIVATE to InspectorTargetAgent methods instead of the whole class.

Canonical link: https://commits.webkit.org/284214@main